--- a/src/scss/protonmail.scss
+++ b/src/scss/protonmail.scss
@@ -2,7 +2,7 @@
 // Options
 //
 $hide-message-size: true;
-$hide-navigation: drafts sent trash spam allmail; // Choose in: drafts starred archive sent trash spam allmail
+$hide-navigation: Drafts Sent Trash Spam "All mail"; // Choose in: drafts starred archive sent trash spam allmail
 
 //
 // Colors
